--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "@tailwindcss/forms": "^0.5.2",
     "@types/cookie": "^0.5.1",
@@ -29,6 +28,7 @@
   "type": "module",
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
+    "@sveltejs/adapter-node": "^1.0.0-next.78",
     "cookie": "^0.4.1",
     "svelte-gestures": "^1.4.1"
   }
